--- a/css/checkout.css
+++ b/css/checkout.css
@@ -25,9 +25,14 @@ img {
   max-width: 20%;
 }
 
+.total-price {
+  text-align: right;
+}
+
 .btn {
   padding: 0 2%;
   margin: 0 auto;
+  background-color: white;
 }
 
 @media screen and (max-width: 600px) {
