--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
   padding: 1rem;
 }
 
+main {
+  flex-grow: 1;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -50,6 +54,26 @@ p,
   max-width: 160px;
 }
 
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .message {
   text-align: center;
   margin-top: 10px;
@@ -85,4 +109,24 @@ p,
 
 .on-sale {
   color: rgb(255, 114, 114);
+}
+
+footer {
+  margin-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 1rem;
+
+  a {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+  }
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: right;
 }
