id fetch, page title, css, variables, favicon

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,5 +1,3 @@
-@import "./style.css";
-
 .message {
   text-align: left;
 }
@@ -11,7 +9,7 @@
 }
 
 .cart-item {
-  background-color: rgba(0, 0, 0, 0.359);
+  background-color: var(--color-box);
   padding: 1rem;
   display: grid;
   grid-template-columns: 1fr auto auto;
@@ -19,14 +17,14 @@
   align-items: center;
 }
 
-.film {
+.cart-film {
   display: flex;
   flex-direction: row;
   gap: 1rem;
-}
 
-img {
-  max-width: 20%;
+  img {
+    max-width: 20%;
+  }
 }
 
 .total-price {
@@ -36,7 +34,7 @@ img {
 .btn {
   padding: 0 2%;
   margin: 0 auto;
-  background-color: white;
+  background-color: var(--color-white);
 }
 
 .btn-primary {
@@ -50,12 +48,12 @@ img {
     gap: 0rem;
   }
 
-  .film {
+  .cart-film {
     flex-direction: column;
-  }
 
-  img {
-    max-width: 60%;
-    margin: 0 auto;
+    img {
+      max-width: 60%;
+      margin: 0 auto;
+    }
   }
 }
