--- a/css/style.css
+++ b/css/style.css
@@ -1,132 +1,7 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background: linear-gradient(to bottom, #35006a, #000);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-main {
-  flex-grow: 1;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.cart-indicator {
-  position: relative;
-}
-
-.cart-count {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  width: 18px;
-  height: 18px;
-  background-color: red;
-  color: white;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  display: none;
-  font-size: 0.9rem;
-}
-
-h1,
-h2,
-h3,
-p,
-.message {
-  color: white;
-}
-
-.logo {
-  max-width: 160px;
-}
-
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 5px solid #fff;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.message {
-  text-align: center;
-  margin-top: 10px;
-  max-width: 300px;
-  padding: 10px;
-
-  &.error {
-    color: white;
-    background-color: maroon;
-    border: 1px white solid;
-  }
-}
-
-.fa-solid {
-  font-size: 1.5rem;
-}
-
-.fa-shopping-cart {
-  color: white;
-}
-
-.fa-cart-plus {
-  color: white;
-}
-
-.fa-trash {
-  color: rgb(255, 114, 114);
-}
-
-.discounted-price {
-  text-decoration: line-through;
-}
-
-.on-sale {
-  color: rgb(255, 114, 114);
-}
-
-footer {
-  margin-top: 100px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 1rem;
-
-  a {
-    text-decoration: none;
-    color: white;
-    cursor: pointer;
-  }
-}
-
-.footer-links {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  text-align: right;
-}
+@import "./variables.css";
+@import "./base.css";
+@import "./index.css";
+@import "./product.css";
+@import "./checkout.css";
+@import "./confirmation.css";
+@import "./documents.css";
